--- a/PrivacyPolicy.html
+++ b/PrivacyPolicy.html
@@ -6,6 +6,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Privacy Policy</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="icon" href="Images/SVGs/Icon.svg">
     <!--CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -27,8 +28,8 @@
     <div class="container py-3">
         <p>Your privacy is critically important to us.</p>
         <p>It is CyberHammer Games policy to respect your privacy regarding any information we may collect while
-            operating our website. This Privacy Policy applies to https://www.domainname.com/ (hereinafter, "us", "we",
-            or "https://www.domainname.com/"). We respect your privacy and are committed to protecting personally
+            operating our website. This Privacy Policy applies to https://www.cyberhammergames.com/ (hereinafter, "us", "we",
+            or "https://www.cyberhammergames.com/"). We respect your privacy and are committed to protecting personally
             identifiable information you may provide us through the Website. We have adopted this privacy policy
             ("Privacy Policy") to explain what information may be collected on our Website, how we use this information,
             and under what circumstances we may disclose the information to third parties. This Privacy Policy applies
@@ -45,14 +46,14 @@
             website. From time to time, CyberHammer Games may release non-personally-identifying information in the
             aggregate, e.g., by publishing a report on trends in the usage of its website.</p>
         <p>CyberHammer Games also collects potentially personally-identifying information like Internet Protocol (IP)
-            addresses for logged in users and for users leaving comments on https://www.domainname.com/ blog posts.
+            addresses for logged in users and for users leaving comments on https://www.cyberhammergames.com/ blog posts.
             CyberHammer Games only discloses logged in user and commenter IP addresses under the same circumstances that
             it uses and discloses personally-identifying information as described below.</p>
         <p class="page-title">- Gathering of Personally-Identifying Information</p>
         <p>Certain visitors to CyberHammer Games websites choose to interact with CyberHammer Games in ways that require
             CyberHammer Games to gather personally-identifying information. The amount and type of information that
             CyberHammer Games gathers depends on the nature of the interaction. For example, we ask visitors who sign up
-            for a blog at https://www.domainname.com/ to provide a username and email address.</p>
+            for a blog at https://www.cyberhammergames.com/ to provide a username and email address.</p>
         <p class="page-title">- Security</p>
         <p>The security of your Personal Information is important to us, but remember that no method of transmission
             over the Internet, or method of electronic storage is 100% secure. While we strive to use commercially
@@ -80,7 +81,7 @@
             preferences on your computer.</p>
         <p>A cookie is a string of information that a website stores on a visitor's computer, and that the visitor's
             browser provides to the website each time the visitor returns. CyberHammer Gamesuses cookies to help
-            CyberHammer Games identify and track visitors, their usage of https://www.domainname.com/, and their website
+            CyberHammer Games identify and track visitors, their usage of https://www.cyberhammergames.com/, and their website
             access preferences. CyberHammer Games visitors who do not wish to have cookies placed on their computers
             should set their browsers to refuse cookies before using CyberHammer Games websites, with the drawback that
             certain features of CyberHammer Games websites may not function properly without the aid of cookies.</p>
