--- a/TermsOfUse.html
+++ b/TermsOfUse.html
@@ -5,6 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Terms Of Use</title>
+    <link rel="icon" href="Images/SVGs/Icon.svg">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <!--CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -26,7 +27,7 @@
     <h3 class="text-center my-4 page-title">Terms Of Use</h3>
     <div class="container py-4">
         <p>Welcome to CyberHammer Games!</p>
-        <p>These terms and conditions outline the rules and regulations for the use of CyberHammer Games Website, located at https://www.domainname.com/.</p>
+        <p>These terms and conditions outline the rules and regulations for the use of CyberHammer Games Website, located at https://www.cyberhammergames.com/.</p>
         <p>By accessing this website we assume you accept these terms and conditions. Do not continue to use CyberHammer Games if you do not agree to take all of the terms and conditions stated on this page. </p>
         <p>Don’t forget that you are legally obligated to these Terms of Service as well as to any other agreements, terms and rules that we tell you apply to your use of our Site.</p>
         <p>The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: "Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company’s terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.</p>
