Added cookies division

--- a/index.html
+++ b/index.html
@@ -202,6 +202,20 @@
         </div>
     </footer>
     <!-- <button onclick="topFunction()" id="myBtn" title="Go to top">&#8593</button> -->
+    <div id="cookies" class="fixed-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <p>This website might be using cookies. By using cyberhammergames.com you agree to the use of cookies as described in our <a href="TermsOfUse.html" target="_blank">cookie policy</a>.</p>
+                </div>
+            </div>
+            <div class="row mx-auto">
+                <div class="col-12 text-center">
+                    <button class="btn btn-primary px-4 mt-2 btn-sm" onclick="removeCookiesDiv()">Accept</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
